<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/main_constraint_layout" android:background="@color/bmi_backgroundColor">
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline9"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.42"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline10"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.55"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline11"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.3"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline12"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.9"/>
    <ImageView
            android:layout_width="@dimen/bmi_mainActivity_headerImageWidth"
            android:layout_height="@dimen/bmi_mainActivity_headerImageHeight"
            app:srcCompat="@drawable/bmi_header_picture"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/img_header" android:layout_marginBottom="@dimen/bmi_mainActivity_headerImageMarginBottom"
            app:layout_constraintBottom_toTopOf="@+id/guideline11" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:background="@android:color/transparent"
            android:scaleType="fitStart"
            android:contentDescription="@string/bmi_mainActivity_headerContentDescription"
            android:foregroundGravity="center"/>
    <TextView
            android:text="@string/weight_kg"
            android:layout_width="@dimen/bmi_mainActivity_labelWidth"
            android:layout_height="wrap_content"
            android:id="@+id/tv_weight" android:layout_marginTop="@dimen/bmi_mainActivity_labelMarginTop"
            app:layout_constraintTop_toBottomOf="@+id/img_header" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/bmi_mainActivity_labelMarginStart"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/bmi_mainActivity_labelMarginEnd"
            android:textSize="@dimen/bmi_mainActivity_labelTextSize"/>
    <EditText
            android:layout_width="@dimen/bmi_mainActivity_inputWidth"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/num_weight" android:layout_marginTop="@dimen/bmi_mainActivity_inputMarginTop"
            app:layout_constraintTop_toBottomOf="@+id/tv_weight" android:layout_marginStart="@dimen/bmi_mainActivity_inputMarginStart"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/bmi_mainActivity_inputMarginEnd"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/your_weight"/>
    <TextView
            android:text="@string/height_cm"
            android:layout_width="@dimen/bmi_mainActivity_labelWidth"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/tv_height" android:layout_marginTop="@dimen/bmi_mainActivity_labelMarginTop"
            app:layout_constraintTop_toTopOf="@+id/guideline9" android:textSize="@dimen/bmi_mainActivity_labelTextSize"
            android:layout_marginEnd="@dimen/bmi_mainActivity_labelMarginEnd"
            android:layout_marginStart="@dimen/bmi_mainActivity_labelMarginStart"/>
    <EditText
            android:layout_width="@dimen/bmi_mainActivity_inputWidth"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/num_height" android:layout_marginTop="@dimen/bmi_mainActivity_inputMarginTop"
            app:layout_constraintTop_toBottomOf="@+id/tv_height"
            android:layout_marginStart="@dimen/bmi_mainActivity_inputMarginStart"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/bmi_mainActivity_inputMarginEndLand"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/your_height"/>
    <TextView
            android:text="@string/init_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_bmi_value"
            android:layout_marginBottom="@dimen/bmi_mainActivity_bmiDisplayMarginBottom"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/but_calculate" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/bmi_mainActivity_bmiDisplayMarginStart"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/bmi_mainActivity_bmiDisplayMarginEnd"
            android:textSize="@dimen/bmi_mainActivity_bmiDisplayTextSize" android:layout_marginTop="@dimen/bmi_mainActivity_bmiDisplayMarginTop"
            app:layout_constraintTop_toTopOf="@+id/guideline10"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.327"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline13"
                                          android:orientation="horizontal"
                                          app:layout_constraintGuide_percent="0.75"/>
    <TextView
            android:text="@string/init_bmi_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_bmi_string_value" android:layout_marginTop="@dimen/bmi_mainActivity_bmiStringValueMarginTop"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/bmi_mainActivity_bmiStringValueMarginStart"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/bmi_mainActivity_bmiStringValueMarginEnd"
            android:textSize="@dimen/bmi_mainActivity_bmiStringValueTextSize" app:layout_constraintTop_toBottomOf="@+id/tv_bmi_value"/>
    <Button
            android:text="@string/button_calculate_text"
            android:layout_width="@dimen/bmi_mainActivity_buttonCalculateWidthLand"
            android:layout_height="@dimen/bmi_mainActivity_buttonCalculateHeight"
            android:id="@+id/but_calculate" app:layout_constraintStart_toStartOf="parent"
            android:onClick="calculateBmiClicked"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline12" android:background="@color/colorPrimary"/>


    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/more"
            android:id="@+id/but_info" android:layout_marginTop="@dimen/bmi_mainActivity_buttonInfoMarginTop"
            app:layout_constraintTop_toTopOf="@+id/guideline10"
            android:layout_marginBottom="@dimen/bmi_mainActivity_buttonInfoMarginBottom"
            app:layout_constraintBottom_toTopOf="@+id/guideline12" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/bmi_mainActivity_buttonInfoMarginEnd"
            app:layout_constraintVertical_bias="0.456"
            android:onClick="onInfoButtonClicked"
            android:visibility="invisible"
            android:contentDescription="@string/bmi_mainActivity_infoButtonContentDescription"
            android:background="@null" app:layout_constraintStart_toEndOf="@+id/tv_bmi_value"
            android:layout_marginStart="@dimen/bmi_mainActivity_buttonInfoMarginStart"/>
</android.support.constraint.ConstraintLayout>