<resources>
    <string name="app_name">SWiM_bmi</string>
    <string name="height_cm">Height [cm]</string>
    <string name="height_ft">Height [ft]</string>
    <string name="height_m">Height [m]</string>
    <string name="your_height">Your height</string>
    <string name="init_bmi">0</string>
    <string name="init_bmi_string">Normal</string>
    <string name="button_calculate_text">calculate</string>
    <string name="weight_kg">Weight [kg]</string>
    <string name="weight_lbs">Weight [lbs]</string>
    <string name="your_weight">Your weight</string>
    <string name="underweight_bmi">Underweight</string>
    <string name="normal_bmi">Normal</string>
    <string name="overweight_bmi">Overweight</string>
    <string name="obese_bmi">Obese</string>
    <string name="severely_obese_bmi">Severely obese</string>
    <string name="menuItem_about">About</string>
    <string name="menuItem_kg_cm">kg - cm</string>
    <string name="menuItem_lbs_ft">lbs - ft</string>
    <string name="bad_weight_err">Bad weight</string>
    <string name="bad_height_err">Bad height</string>
    <string name="underweight_advice">
        An underweight person is a person whose body weight is considered too low to be healthy. Underweight people have
        a body mass index of under 18.5 or a weight 15% to 20% below that normal for their age and height group. A
        person may be underweight due to genetics, metabolism, drug use, lack of food (frequently due to poverty),
        eating disorder, or illness (both physical and mental). Being underweight is associated with certain medical
        conditions, including anorexia, type 1 diabetes, hyperthyroidism, cancer, or tuberculosis. People
        with gastrointestinal or liver problems may be unable to absorb nutrients adequately. People with certain eating
        disorders can also be underweight due to lack of nutrients/over exercise. Underweight might be secondary to or
        symptomatic of an underlying disease. Unexplained weight loss may require professional medical diagnosis.
        Underweight can also be a primary causative condition. Severely underweight individuals may have poor physical
        stamina and a weak immune system, leaving them open to infection. According to Robert E. Black of the Johns
        Hopkins School of Public Health (JHSPH), Underweight status
    </string>
    <string name="normal_advice">
        normal weight is a weight that is believed to be maximally healthful for a person, based chiefly on height but
        modified by
        factors such as gender, age, build, and degree of muscular development.
    </string>
    <string name="overweight_advice">
        Being overweight is associated with health problems such as Type 2 diabetes. Obesity is associated with
        greater health problems than overweight. In 2006 Adams et al. estimated that the risk of death increases by
        20 to 40 percent among overweight people. Some people think that being overweight is not as unhealthy as is
        commonly thought. A 2013 review of 97 Pubmed articles with a sample size of 2.88 million found that overweight
        is associated with significantly lower all-cause mortality (death) than normal weight. Body fat contains
        energy that the body can use to heal when it is sick. 51.3% of overweight adults are metabolically healthy.
        Metabolically healthy overweight women are no more likely to die or have a heart attack or stroke than
        metabolically healthy normal weight women. Doctors often tell overweight people that losing weight would be
        good for their health. People usually try to lose weight by eating less. This is called dieting. They may
        exercise too. Dieting is often ineffective. 41% of dieters weigh more four to five years after the end of the
        diet than before it began.
    </string>
    <string name="obese_advice">
        Obesity is most commonly caused by a combination of excessive food intake, lack of physical activity, and
        genetic susceptibility. A few cases are caused primarily by genes, endocrine disorders, medications,
        or mental disorder. The view that obese people eat little yet gain weight due to a slow metabolism is not
        medically supported. On average, obese people have a greater energy expenditure than their normal
        counterparts due to the energy required to maintain an increased body mass. Obesity is mostly
        preventable through a combination of social changes and personal choices. Changes to diet and exercising
        are the main treatments. Diet quality can be improved by reducing the consumption of energy-dense foods,
        such as those high in fat or sugars, and by increasing the intake of dietary fiber. Medications can be used,
        along with a suitable diet, to reduce appetite or decrease fat absorption. If diet, exercise, and medication
        are not effective, a gastric balloon or surgery may be performed to reduce stomach volume or length of the
        intestines, leading to feeling full earlier or a reduced ability to absorb nutrients from food.
    </string>
    <string name="severely_obese_advice">
        you’re extremely obese, losing weight can mean “less heart disease, less diabetes and less cancer,” said
        Robert Eckel, M.D., past president of the American Heart Association. “Metabolic improvements start to occur
        when people with extreme obesity lose about 10 percent of their body weight.” Losing weight can reduce your
        risk of heart disease and stroke; risk factors like high blood pressure, plasma glucose and sleep apnea. It can
        also help lower your total cholesterol, triglycerides and raise “good” cholesterol — HDL.
    </string>
    <string name="bmi_mainActivity_headerContentDescription">image with bmi ranges</string>
    <string name="bmi_mainActivity_infoButtonContentDescription">infobutton</string>
    <string name="bmi_activityAboutTitle">About</string>
    <string name="bmi_activityAbout_aboutText">This app is supposed to calculate your BMI. If you have any
        problems/questions, please contact me via undermentioned form
    </string>
    <string name="bmi_aboutActivity_emailContentHint">Your message...</string>
    <string name="bmi_aboutActivity_buttonSendText">Send email</string>
    <string name="bmi_activityDetails_adviceDetailsDefaultText">advice</string>
    <string name="bmi_details_bmiDetailsImageDesc">image</string>
    <string name="bmi_menu_historyTitle">History</string>
    <string name="bmi_saved_elemnt_weight_label">Weight:</string>
    <string name="bmi_saved_element_weight_label">bmi_saved_element_weight</string>
    <string name="bmi_saved_element_init_text">0</string>
    <string name="bmi_saved_element_height_label">Height:</string>
</resources>
