<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relative_layout_details"
        android:background="@color/bmi_backgroundColor"
        tools:context=".DetailsActivity">

    <TextView
            android:text="@string/init_bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_bmi_details"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/img_bmi_details"
            android:layout_alignBottom="@id/img_bmi_details"
            android:gravity="center_horizontal|center_vertical" android:textSize="@dimen/bmi_detailsActivity_bmiTextSize"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_bmi_details"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            app:srcCompat="@mipmap/ic_launcher" android:layout_margin="@dimen/bmi_detailsActivity_imgBmiMargin"
            android:contentDescription="@string/bmi_details_bmiDetailsImageDesc"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_bmi_details"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/bmi_detailsActivity_scrollViewMargin">

        <TextView
                android:text="@string/bmi_activityDetails_adviceDetailsDefaultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_advice_details"
                />

    </ScrollView>

</RelativeLayout>